src/client/css/style.css
/* ... */
section#community .content {
  font-size: 20px;
  font-weight: 600;
  font-style: italic;
}

section#community .col-md-4 {
  padding: 0 0 40px 0;
}

section#community .contribute-btn {
  font-size: 18px;
  font-size: 1.125rem;
  font-weight: bold;
  line-height: 1.3;
  display: inline-block;
  margin: 0 auto 20px auto;
  padding: 20px 60px;
  -webkit-transition: all .2s ease-in-out;
          transition: all .2s ease-in-out;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  color: white;
  border-radius: 10px;
  background: #0095dd;
}

section#community .contribute-btn:visited {
  color: #fff;
}

section#community .contribute-btn:hover {
  color: #0095dd;
  background: #fff;
}

section#community .fa-heart {
  padding-bottom: 5px;
  color: #dfa09d;
}

section#community .fa-users {
  padding-bottom: 5px;
  color: #dfa09d;
}

section#community .fa-globe
{
  padding-bottom: 5px;
  color: #dfa09d;
}
/*About(Community) Section End*/

/* Contact form CSS */
#contact_form {
  background-color: #484848;
}

#contact_form input {
  border-color: #484848;
}

#contact_form input:focus,
#contact_form textarea:focus {
  color: #000;
  border-color: #00f;
}

.error {
  font-size: 10px;
  color: #f00;
}

#success {
  color: white;
}

#send {
  margin-bottom: 90px;
  background:#0095dd;
  color:#fff;
}
#send:hover{
  background:#fff;
  color:#0095dd;
}
.contact {
  padding: 80px 0 0 0;
}

.contact h2.section-heading {
  font-size: 50px;
  margin: 0 0 40px 0;
}

.contact h3.section-subheading {
  font-family: italic 400 16px 'Droid Serif','Helvetica Neue',Helvetica,Arial,sans-serif;
  margin: 0 0 75px 0;
  text-transform: none;
}

section#contact_form {
  background: center no-repeat #222;
}

section#contact_form .section-heading {
  font: 700 50px Montserrat,'Helvetica Neue',Helvetica,Arial,sans-serif;
  padding: 10px;
  color: #fff;
}

section#contact_form .form-group {
  margin: 0 0 35px 0;
}

section#contact_form .form-group input,
section#contact_form .form-group textarea {
  padding: 20px;
}

section#contact_form .form-group input.form-control {
  height: auto;
}

section#contact_form .form-group textarea.form-control {
  height: 150px;
}

section#contact_form .form-control:focus {
  border-color: #fed136;
  box-shadow: none;
}

section#contact_form::-webkit-input-placeholder {
  font: 700 Montserrat,'Helvetica Neue',Helvetica,Arial,sans-serif;
  text-transform: uppercase;
  color: #bbb;
}

section#contact_form:-moz-placeholder {
  font: 700 Montserrat,'Helvetica Neue',Helvetica,Arial,sans-serif;
  text-transform: uppercase;
  color: #bbb;
}

section#contact_form::-moz-placeholder {
  font: 700 Montserrat,'Helvetica Neue',Helvetica,Arial,sans-serif;
  text-transform: uppercase;
  color: #bbb;
}

section#contact_form:-ms-input-placeholder {
  font: 700 Montserrat,'Helvetica Neue',Helvetica,Arial,sans-serif;
  text-transform: uppercase;
  color: #bbb;
}

section#contact_form .text-danger {
  color: #e74c3c;
}

.send-button {
  font-family: Montserrat,'Helvetica Neue',Helvetica,Arial,sans-serif;
  font-weight: 700;
  width: 200px;
  height: 50px;
  /*margin: 0 0 0 20px;*/
  text-transform: uppercase;
  color: #fff;
  border-color: #fed136;
}

@media screen and (max-width: 768px) {
  #contact_form {
    padding-bottom: 10em;
  }
}

/* Footer Start*/
footer {
  font-family: 'Open Sans', sans-serif;
  position: relative;
  clear: both;
  margin-top: -200px; /* negative value of footer height */
  padding: 20px 0;
  border-top: 5px solid #999;
  background-color: #414C59 ;
  height:170px;
}

.footer-logo img {
  width: 183px;
  height: 72px;
}

footer ul {
  list-style-type: none;
}

footer h1 {
  margin: 0;
}

footer h2 {
color: #eee;
}

footer .fa {
  margin: 3px;
  color: #eee;
}
footer .fa:hover{
  color: #0095dd;
}
footer a:hover,
a:focus {
  text-decoration: none;
}

.links a {
  font-size: 24px;
  font-weight: normal;
  position: relative;
  text-decoration: none;
  color: #eee;
}

.links a:before {
  position: absolute;
  bottom: 0;
  left: 0;
  visibility: hidden;
  width: 100%;
  height: 2px;
  content: '';
  -webkit-transition: all .3s ease-in-out 0s;
          transition: all .3s ease-in-out 0s;
  -webkit-transform: scaleX(0);
          transform: scaleX(0);
  background-color: #337ab7;
}

.links a:hover:before {
  visibility: visible;
  -webkit-transform: scaleX(1);
          transform: scaleX(1);
}

#file-bugs {
  color: #fff;
}

#file-bugs a {
  font-size: 1em;
}

.modal-body ul {
  list-style: none;
}

#developers-list-container {
  width: 10em;
  margin-left: auto;
  margin-right: auto;
  text-align: left;
}

/*Footer End*/

/* Copyright Text */
section#copyright{
  padding: 10px 0 0 0;
  color: #373333;
  border-top: 1px solid #afafaf;
  background: #D7D3C8;
}
/* Copright Text End*/
/*For Ajax Loader On Contact Us Form*/
.loadingGifOnSubmitButton {
    background:url('../img/ajax-loader.gif') no-repeat 50% 50%;
}
/*For Ajax Loader On Contact Us Form ENDS*/

